<resources>
    <string name="app_name">Group3_COMP304Sec002_Lab4</string>
    <string name="tagline">Classroom Manager</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="user">User ID</string>
    <string name="pass">Password</string>
    <string name="classrooms">Classrooms</string>
    <string name="students">Student ID #</string>
    <string name="stuID">Student ID #</string>
    <string name="view">View</string>
    <string name="update">Update</string>
    <string name="results">Results Displayed Here</string>
    <string name="fn">First Name</string>
    <string name="ln">Last Name</string>
    <string name="dept">Department</string>
    <string name="hr">Classroom ID #</string>
    <string name="prof">Professor</string>
    <string name="display">Display</string>
    <string name="profHint">Enter Professor ID #</string>
    <string name="classMsg">Classroom Data</string>
    <string name="pid">Professor ID #</string>
    <string name="cid">Classroom ID #</string>
    <string name="floor">Floor</string>
    <string name="ac">Air Conditioned</string>
    <string name="t">True</string>
    <string name="f">False</string>
    <string name="enter">Enter</string>
    <string name="wall">Wall Color</string>
</resources>